@@ -2,6 +2,7 @@ Revision history for Perl module Dist-Zilla-PluginBundle-DOHERTY
 
 {{$NEXT}}
     * Require Pod::Weaver::PluginBundle::DOHERTY
+    * Allow README to be dirty - it always will be since we copy from build
 
 0.002     2010-11-13
     * Fix passing skip_tests and add_tests to Dist::Zilla::PluginBundle::TestingMania
